--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
                     <br>
-                    Powered by <a href="http://sailorjs0804.github">SailorJS</a>
+                    Powered by <a href="https://github.com/sailorjs0804">SailorJS</a>
                 </p>
             </div>
         </div>
