--- a/_includes/short-about.html
+++ b/_includes/short-about.html
@@ -2,6 +2,7 @@
   <hr>
   <h5><a href="{{'/' | prepend: site.baseurl }}">ABOUT ME</a></h5>
   <div class="short-about">
+    <img src="img/avatar.jpg" />
     {% if site.sidebar-about-description %}
     <p>{{site.sidebar-about-description}}</p>
     {% endif %}
